--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -18,7 +18,7 @@
                        
                 </ul>
             </li>
-            <li class="primaryNavIconList__item dropdown">
+            <li class="primaryNavIconList__item dropdown" id="profileDropDown">
                 <div class="dropdown-toggle" id="dropdownMenu2" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                     <img src="~/Content/Images/icn_profile_B1.png">
                 </div>
