--- a/Odin/Content/css/primaryNav.scss
+++ b/Odin/Content/css/primaryNav.scss
@@ -103,3 +103,15 @@ ul.primaryNavIconList {
         }
     }
 }
+
+#profileDropDown {
+    ul.dropdown-menu {
+        .divider{
+            margin: 0px;
+        }
+
+        li {
+            margin: .5rem 0 .5rem 0;
+        }
+    }
+}
