Fixed navigating home via logo.

--- a/Odin/Views/Help/Index.cshtml
+++ b/Odin/Views/Help/Index.cshtml
@@ -145,7 +145,7 @@
             </div>
         </div>
         <div class="btnRow">
-            @Html.ActionLink("Go Home", "Index", "Orders", null, new { @class = "btn btn-default" })
+            @Html.ActionLink("Go Home", "Index", "Role", null, new { @class = "btn btn-default" })
         </div>
     </div>
 </div>
