--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -30,7 +30,7 @@
         <ul class="row sectionList intake-row collapse in">
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 @Html.LabelFor(model => @Model.Transferee.InviteStatus)
-                <p>@Model.Transferee.InviteStatus</p>
+                <p id="lblInviteStatus">@Model.Transferee.InviteStatus</p>
             </li>
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 <button id="btnInviteTransferee">Invite Transferee</button>
