--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -1,9 +1,20 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
 
 <div class="container-fluid" id="intake" data-order-id="@Model.Id">
-    <div class="titleGroup">
-        <h1 class="sectionTitle">Intake</h1>
-        <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
+<div class="titleGroup">
+    <h1 class="sectionTitle">Intake</h1>
+    <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
+</div>
+    <div class="intake-block invite-block">
+            <h2 class="sectionSubHead">Transferree Invite</h2>
+            <div class="row">
+                <p><span style="font-weight: bold;">Invite Not Sent</span> Click the button to email your transferree a sign up link.</p>
+            </div>
+            <ul class="row sectionList">
+                <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
+                    <button id="btnInviteTransferee" class="btn-primary">Invite Transferee</button>
+                </li>
+            </ul>
     </div>
     <div class="intake-block expanded">
         <div class="intake-header">
@@ -25,15 +36,6 @@
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 @Html.LabelFor(model => @Model.Transferee.PhoneNumber)
                 <p class="input-group time">@Model.Transferee.PhoneNumber</p>
-            </li>
-        </ul>
-        <ul class="row sectionList intake-row collapse in">
-            <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                @Html.LabelFor(model => @Model.Transferee.InviteStatus)
-                <p id="lblInviteStatus">@Model.Transferee.InviteStatus</p>
-            </li>
-            <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
-                <button id="btnInviteTransferee">Invite Transferee</button>
             </li>
         </ul>
     </div>
