--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -6,7 +6,7 @@
     <p class="sectionInstruction">Please fill out any items that are not already auto-generated that could aid in the help of your clients placement.</p>
 </div>
     <div class="intake-block invite-block">
-            <h2 class="sectionSubHead">Transferree Invite</h2>
+            <h2 class="sectionSubHead">Transferee Invite</h2>
             <div class="row">
                 <p><span style="font-weight: bold;">Invite Not Sent</span> Click the button to email your transferree a sign up link.</p>
             </div>
