--- a/Odin/Content/css/transferee/HFProperties.scss
+++ b/Odin/Content/css/transferee/HFProperties.scss
@@ -63,8 +63,8 @@
         }
 
         img.location {
-            width: 70px;
-            height:70px;
+            width: 7rem;
+            height:7rem;
         }
     }
 
