--- a/Odin/Content/css/transferee/itinerary.scss
+++ b/Odin/Content/css/transferee/itinerary.scss
@@ -1,6 +1,26 @@
 ﻿@import "../shared/_definitions.scss";
 
+ul.thumbnails-carousel li img {
+    max-width: 6rem !important;
+}
 
+.img-responsive {
+    height: 32rem !important;
+    width: 55rem;
+}
+
+img li.thumbnails-carousel, img.location {
+    width: 5rem;
+    height: 3rem;
+}
+
+.glyphicon-chevron-left {
+    margin-left: -4.2rem !important;
+}
+
+.glyphicon-chevron-right {
+    margin-right: -4.2rem !important;
+}
 
 div#itinerary {
     .sectionList {
@@ -12,7 +32,7 @@ div#itinerary {
     button.btn {
         border: none;
         font-size: 1.5rem;
-        text-transform:none;
+        text-transform: none;
     }
 
     .event-item {
