--- a/Odin/Content/css/transferee/housing.css
+++ b/Odin/Content/css/transferee/housing.css
@@ -6,6 +6,23 @@
   overflow: hidden;
   position: relative; }
 
+.img-responsive {
+  height: 32rem !important;
+  width: 55rem; }
+
+img li.thumbnails-carousel, img.location {
+  width: 8rem;
+  height: 5rem; }
+
+.glyphicon-chevron-left {
+  margin-left: -4.2rem !important; }
+
+.glyphicon-chevron-right {
+  margin-right: -4.2rem !important; }
+
+ul.thumbnails-carousel li img {
+  max-width: 6rem !important; }
+
 #map {
   /*height getting set in javascript because of map issue.*/
   height: 300px; }
@@ -103,7 +120,6 @@ li.propertyItem {
         text-align: center; }
     li.propertyItem > div img {
       display: block;
-      width: 5rem;
       margin: 0 auto; }
     @media screen and (max-width: 61.875rem) {
       li.propertyItem > div {
