--- a/Odin/Content/css/transferee/housing.scss
+++ b/Odin/Content/css/transferee/housing.scss
@@ -5,7 +5,26 @@
     overflow: hidden;
     position: relative;
 }
+.img-responsive 
+{
+    height:32rem !important;
+    width:55rem;
+}
+img li.thumbnails-carousel, img.location
+{
+    width:8rem;
+    height:5rem;
+}
 
+.glyphicon-chevron-left {
+    margin-left: -4.2rem !important;
+}
+.glyphicon-chevron-right {
+    margin-right: -4.2rem !important;
+}
+ul.thumbnails-carousel li img {
+    max-width: 6rem !important;
+}
 #map {
     /*height getting set in javascript because of map issue.*/
     height: 300px;
@@ -154,7 +173,6 @@ li.propertyItem {
 
         img {
             display: block;
-            width: 5rem;
             margin: 0 auto;
         }
 
