--- a/Odin/Views/Orders/Partials/_HousingProperties.cshtml
+++ b/Odin/Views/Orders/Partials/_HousingProperties.cshtml
@@ -122,7 +122,7 @@
 
     </ul>
 </div>
-<div class="modal fade notificationModal" id="modalNotification" data-backdrop="none" tabindex="-100" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true" style="z-index: 2147483647;">
+<div class="modal fade notificationModal" id="modalNotification" data-backdrop="false" tabindex="-100" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true" style="z-index: 2147483647;">
     <div class="modal-dialog" role="document" id="notification" style="z-index: 2147483647;">
         <div class="modal-content">
             
