--- a/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
+++ b/Odin/Views/Orders/Partials/_PropertyDetails.cshtml
@@ -35,6 +35,13 @@
                         <label>@Html.DisplayNameFor(model => model.PropertyAmount)</label>
                         <p>@Html.DisplayFor(model => model.PropertyAmount)</p>
                     </li>
+                    @if (Model.ViewingDate.HasValue)
+                    { 
+                    <li class="col-md-12">
+                        <label>@Html.DisplayNameFor(model => model.ViewingDate)</label>
+                        <p>@Html.DisplayFor(model => model.ViewingDate)</p>
+                    </li>
+                    }
                 </ul>
                 <div class="row controlsContainer">
                     <div class="col-md-12">
@@ -42,7 +49,6 @@
                     </div>
                 </div>
             </div>
-
 
             <div class="col-md-12">
                 <ul class="row sectionList">
