--- a/Odin/Views/Orders/Index.cshtml
+++ b/Odin/Views/Orders/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model Odin.ViewModels.Orders.Index.OrderIndexManagerViewModel
+﻿@using Odin.Data.Core.Models
+@model Odin.ViewModels.Orders.Index.OrderIndexManagerViewModel
 @{
     ViewBag.Title = "Orders Page";
     Layout = "~/Views/Shared/_Common.cshtml";
@@ -11,7 +12,7 @@
             <input id="searchbox" placeholder="Type here to search, select to go" />
         </div>
     
-    @if (@ViewBag.userRole.Equals("Program Manager") || @ViewBag.userRole.Equals("Global Supply Chain"))
+    @if (User.IsInRole(UserRoles.ProgramManager) || User.IsInRole(UserRoles.GlobalSupplyChain))
     {
 
         <div class="dropdown show">
