Added UI tests For Orders clicks and added PhantomLib(Not used)

--- a/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
+++ b/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
@@ -27,26 +27,26 @@
         <ul class="nav navbar-nav">
             <hr class="transfereeSideNav__rule"/>
             <li class="item selected nav-item" data-panel="dashboard">
-                <a href="#dashboard">
+                <a id="dashboard" href="#dashboard">
                     <img src="~/Content/Images/icn_details.png"/>
                     <label>Dashboard</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="housing">
-                <a href="#housing">
+                <a id="housing" href="#housing">
                     <img src="~/Content/Images/icn_housing.png"/>
                     <label>Housing</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="itinerary">
-                <a href="#itinerary">
+                <a id="itinerary" href="#itinerary">
                     <img src="~/Content/Images/icn_internal_itinerary.png"/>
                     <label>Itinerary</label>
                 </a>
             </li>
             <hr class="transfereeSideNav__rule"/>
             <li class="item nav-item" data-panel="help">
-                <a href="#help">
+                <a id="help" href="#help">
                     <img src="~/Content/Images/icn_internal_itinerary.png"/>
                     <label>Help / FAQ</label>
                 </a>
