--- a/Odin/Views/Orders/Partials/_ConsultantSideNav.cshtml
+++ b/Odin/Views/Orders/Partials/_ConsultantSideNav.cshtml
@@ -32,38 +32,38 @@
             <hr class="transfereeSideNav__rule" />
 
             <li class="item selected nav-item" data-panel="intake">
-                <a href="#intake">
+                <a id="intake" href="#intake">
                     <img src="~/Content/Images/icn_intake.png" />
                     <label>Intake</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="details">
-                <a href="#details">
+                <a id="details" href="#details">
                     <img src="~/Content/Images/icn_details.png" />
                     <label>Details</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="housing">
-                <a href="#housing">
+                <a id="housing" href="#housing">
                     <img src="~/Content/Images/icn_housing.png" />
                     <label>Housing</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="history">
-                <a href="#history">
+                <a id="history" href="#history">
                     <img src="~/Content/Images/icn_history.png" />
                     <label>History</label>
                 </a>
             </li>
             <hr class="transfereeSideNav__rule" />
             <li class="item nav-item" data-panel="messages">
-                <a href="#messages">
+                <a id="messages" href="#messages">
                     <img src="~/Content/Images/icn_internal_messages.png" />
                     <label>Messages</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="itinerary">
-                <a href="#itinerary">
+                <a id="itinerary" href="#itinerary">
                     <img src="~/Content/Images/icn_internal_itinerary.png" />
                     <label>Itinerary</label>
                 </a>
