Added UI tests for the PM_View

--- a/Odin/Views/Account/Login.cshtml
+++ b/Odin/Views/Account/Login.cshtml
@@ -40,7 +40,7 @@
                 <div class="form-group">
                     <div class="passwd col-md-offset-2 col-md-10">
                         <input type="submit" value="Login" class="btn btn-default" />
-                        <p id="forgot">@Html.ActionLink("Forgot password", "ForgotPassword")</p>
+                        <p id="forgot">@Html.ActionLink("Forgot password", "ForgotPassword", null, new { id = "forgot_password"})</p>
                     </div>
                 </div>                
             }
