--- a/Odin/Content/css/primaryNav.css
+++ b/Odin/Content/css/primaryNav.css
@@ -56,6 +56,8 @@ ul.primaryNavIconList {
   display: flex;
   margin-bottom: 0;
   padding: 0 0 0 0; }
+  ul.primaryNavIconList .dropdown-toggle:hover {
+    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3); }
   ul.primaryNavIconList li.primaryNavIconList__item {
     position: relative;
     height: calc(3rem + 1rem);
