--- a/Odin/Content/css/primaryNav.scss
+++ b/Odin/Content/css/primaryNav.scss
@@ -71,6 +71,10 @@ ul.primaryNavIconList {
     margin-bottom: 0;
     padding: 0 0 0 0;
 
+    .dropdown-toggle:hover{
+        box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+    }
+
     li.primaryNavIconList__item {
         position: relative;
         height: calc(#{$logoHeight} + 1rem);
