Role security and refactoring.

--- a/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
+++ b/Odin/Views/Orders/Partials/_TransfereeSideNav.cshtml
@@ -14,12 +14,14 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <div class="eeDetails">
+            <p class="eeName">Consultant</p>
             <p class="eeName">@Model.ConsultantFullName</p>
             <p class="eeDetails">@Model.ConsultantEmail</p>
             <p class="eeDetails">@Model.ConsultantPhoneNumber</p>
         </div>
         <hr class="transfereeSideNav__rule" />
         <div class="eeDetails">
+            <p class="eeName">Program Manager</p>
             <p class="eeName">@Model.ProgramManagerFullName</p>
             <p class="eeDetails">@Model.ProgramManagerEmail</p>
             <p class="eeDetails">@Model.ProgramManagerPhoneNumber</p>
@@ -52,7 +54,6 @@
                 </a>
             </li>
         </ul>
-        <span id="backButton">BACK TO LIST</span>
     </div>
 </div>
 
