--- a/Odin/Content/css/primaryNav.css
+++ b/Odin/Content/css/primaryNav.css
@@ -56,15 +56,16 @@ ul.primaryNavIconList {
   display: flex;
   margin-bottom: 0;
   padding: 0 0 0 0; }
-  ul.primaryNavIconList .dropdown-toggle:hover {
-    box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3); }
   ul.primaryNavIconList li.primaryNavIconList__item {
     position: relative;
-    height: calc(3rem + 1rem);
+    padding: 1rem;
     margin-right: 1rem;
-    padding: 0.5rem 1rem; }
+    border-radius: 50%;
+    cursor: pointer; }
     ul.primaryNavIconList li.primaryNavIconList__item:last-child {
       margin-right: 0rem; }
+    ul.primaryNavIconList li.primaryNavIconList__item:hover {
+      box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3); }
     ul.primaryNavIconList li.primaryNavIconList__item span {
       position: absolute;
       top: 0;
