Renamed tabs and other refactoring.

--- a/Odin/Views/Orders/Partials/_ConsultantSideNav.cshtml
+++ b/Odin/Views/Orders/Partials/_ConsultantSideNav.cshtml
@@ -34,13 +34,13 @@
             <li class="item selected nav-item" data-panel="intake">
                 <a href="#intake">
                     <img src="~/Content/Images/icn_intake.png" />
-                    <label>Intake</label>
+                    <label>Program Details</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="details">
                 <a href="#details">
                     <img src="~/Content/Images/icn_details.png" />
-                    <label>Details</label>
+                    <label>Service Reporting</label>
                 </a>
             </li>
             <li class="item nav-item" data-panel="housing">
