--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -1,104 +1,9 @@
 ﻿@model Odin.ViewModels.Orders.Transferee.OrdersTransfereeViewModel
 
 <div class="container-fluid" id="details" data-order-id="@Model.Id">
-    <div class="titleGroup">
-        <h1 class="sectionTitle">Profile Summary</h1>
-    </div>
-    <h2 class="sectionSubHead">File Details</h2>
-    <ul class="row sectionList">
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Manager:</label>
-            <p>@Model.ProgramManager.FullName</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Manager Email:</label>
-            <p>@Model.ProgramManager.Email</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Manager Phone #:</label>
-            <p> @Model.PhoneNumberDisplay</p>
-        </li>
-
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>SE Number:</label>
-            <p>@Model.SeContactUidDisplay</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Client Number:</label>
-            <p>@Model.ClientFileNumberDisplay</p>
-        </li>
-        <!-- this is a hack, remove this column-->
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label></label>
-            <p>&nbsp;</p>
-        </li>
-    </ul>
-    <hr>
-    <h2 class="sectionSubHead">Important Dates</h2>
-    <ul class="row sectionList">
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Familiarization Trip</label>
-            <p>@Model.PreTripDateDisplay</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Work Start Date:</label>
-            <p>@Model.WorkStartDateDisplay</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Temp Housing:</label>
-            <p>@Model.TempHousingDays</p>
-        </li>
-
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Final Arrival:</label>
-            <p>@Model.FinalArrivalDateDisplay &nbsp;</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Home Finding Date:</label>
-            <p>@Model.HomeFindingDateDisplay</p>
-        </li>
-        <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-            <label>Temp Housing Last Day:</label>
-            <p>@Model.TempHousingEndDateDisplay</p>
-        </li>
-    </ul>
-    <hr>
-    @if (@Model.HomeFinding != null)
-    {
-        <h2 class="sectionSubHead">Housing Details</h2>
-        <ul class="row sectionList">
-            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                <label>Monthly Budget:</label>
-                <p>@Model.HousingBudgetDisplay</p>
-            </li>
-            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                <label>Housing:</label>
-                <p>@Model.HousingTypeDisplay</p>
-            </li>
-            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                <label>School District:</label>
-                <p>@Model.SchoolDistrictDisplay </p>
-            </li>
-
-            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                <label>BD/BA:</label>
-                <p>@Model.NumberOfBedroomsDisplay/@Model.NumberOfBathroomsDisplay</p>
-            </li>
-            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                <label>Sq.Ft:</label>
-                <p>@Model.SquareFootageDisplay</p>
-            </li>
-            <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
-                <label>Rent or Own:</label>
-                <p>@Model.HomeFinding.OwnershipType</p>
-            </li>
-        </ul>
-        <hr>
-    }    
-
     <div class="details-services" data-block="services">
         <h1 class="sectionTitle">
-            Scheduled Services
+            Service Reporting
             <span class="sectionSave">
                 - Save
             </span>
