--- a/Odin/Views/Orders/Partials/_Intake.cshtml
+++ b/Odin/Views/Orders/Partials/_Intake.cshtml
@@ -16,7 +16,7 @@
         <ul class="row sectionList intake-row collapse in">
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 @Html.LabelFor(model => @Model.Transferee.FullName)
-                <p id="Transferee_FullName">@Model.Transferee.FullName</pid="Transferee_FullName">
+                <p id="Transferee_FullName">@Model.Transferee.FullName</p>
             </li>
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3">
                 @Html.LabelFor(model => @Model.Transferee.Email)
@@ -106,19 +106,19 @@
         <ul class="row sectionList intake-row collapse in">
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.OriginCity)
-                <span class="intake-span">@Model.OriginCity</span>
+                <span id="spanOriginCity" class="intake-span">@Model.OriginCity</span>
                 @Html.TextBoxFor(m => @Model.OriginCity, new { @class = "form-control intake-input" })
                 @Html.HiddenFor(m => @Model.OriginCity, new { @class = "intake-hidden" })
             </li>
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.OriginState)
-                <span class="intake-span">@Model.OriginState</span>
+                <span id="spanOriginState" class="intake-span">@Model.OriginState</span>
                 @Html.TextBoxFor(m => @Model.OriginState, new { @class = "form-control intake-input" })
                 @Html.HiddenFor(m => @Model.OriginState, new { @class = "intake-hidden" })
             </li>
             <li class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.OriginCountry)
-                <span class="intake-span">@Model.OriginCountry</span>
+                <span id="spanOriginCountry" class="intake-span">@Model.OriginCountry</span>
                 @Html.TextBoxFor(m => @Model.OriginCountry, new { @class = "form-control intake-input" })
                 @Html.HiddenFor(m => @Model.OriginCountry, new { @class = "intake-hidden" })
             </li>
@@ -142,13 +142,13 @@
         <div class="row intake-row collapse in">
             <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.PreTripDateDisplay)
-                <span class="intake-span">@Model.PreTripDateDisplay</span>
+                <span id="spanPreTripDate" class="intake-span">@Model.PreTripDateDisplay</span>
                 @Html.DatePicker("intake-date date", "PreTripDate", Model.PreTripDate)
                 @Html.HiddenFor(model => @Model.PreTripDateDisplay, new { @class = "intake-hidden" })
             </div>
             <div class="col-xs-6 col-sm-6 col-md-7 col-lg-7 intake-col">
                 @Html.LabelFor(model => @Model.PreTripNotes)
-                <span class="intake-span">@Model.PreTripNotes</span>
+                <span id="spanPreTripNotes" class="intake-span">@Model.PreTripNotes</span>
                 @Html.TextBoxFor(model => @Model.PreTripNotes, new { @class = "form-control intake-input" })
                 @Html.HiddenFor(model => @Model.PreTripNotes, new { @class = "intake-hidden" })
             </div>
@@ -156,13 +156,13 @@
         <div class="row intake-row collapse in">
             <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.EstimatedArrivalDateDisplay)
-                <span class="intake-span">@Model.EstimatedArrivalDateDisplay</span>
+                <span id="spanEstimatedArrivalDate" class="intake-span">@Model.EstimatedArrivalDateDisplay</span>
                 @Html.DatePicker("intake-date date", "EstimatedArrivalDate", Model.EstimatedArrivalDate)
                 @Html.HiddenFor(model => @Model.EstimatedArrivalDateDisplay, new { @class = "intake-hidden" })
             </div>
             <div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 intake-col">
                 @Html.LabelFor(model => @Model.WorkStartDateDisplay)
-                <span class="intake-span">@Model.WorkStartDateDisplay</span>
+                <span id="spanWorkStartDate" class="intake-span">@Model.WorkStartDateDisplay</span>
                 @Html.DatePicker("intake-date date", "WorkStartDate", Model.WorkStartDate)
                 @Html.HiddenFor(model => @Model.WorkStartDateDisplay, new { @class = "intake-hidden" })
             </div>
