Added test from Housing page

--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -11,15 +11,15 @@
             <ul class="row sectionList">
                 <li class="col-md-6">
                     <label>@Html.DisplayNameFor(model => model.HousingBudget)</label>
-                    <p>@Html.DisplayFor(model => model.HousingBudget)</p>
+                    <p id="HousingBudget">@Html.DisplayFor(model => model.HousingBudget)</p>
                 </li>
                 <li class="col-md-6">
                     <label>@Html.DisplayNameFor(model => model.NumberOfBedrooms)</label>
-                    <p>@Html.DisplayFor(model => model.NumberOfBedrooms)</p>
+                    <p id="NumberOfBedrooms">@Html.DisplayFor(model => model.NumberOfBedrooms)</p>
                 </li>
                 <li class="col-md-6">
                     <label>@Html.DisplayNameFor(model => model.PetsCount)</label>
-                    <p>@Html.DisplayFor(model => model.PetsCount) </p>
+                    <p id="PetsCount">@Html.DisplayFor(model => model.PetsCount) </p>
                 </li>
                 <li class="col-md-6">
                     <label>@Html.DisplayNameFor(model => model.TransportationTypeName)</label>
