--- a/Odin/Views/Orders/Partials/_Details.cshtml
+++ b/Odin/Views/Orders/Partials/_Details.cshtml
@@ -8,24 +8,24 @@
     <ul class="row sectionList">
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Manager:</label>
-            <p>@Model.ProgramManager.FullName</p>
+            <p id="pmFname">@Model.ProgramManager.FullName</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Manager Email:</label>
-            <p>@Model.ProgramManager.Email</p>
+            <p id="pmemail">@Model.ProgramManager.Email</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Manager Phone #:</label>
-            <p> @Model.PhoneNumberDisplay</p>
+            <p id="pmpno"> @Model.PhoneNumberDisplay</p>
         </li>
 
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>SE Number:</label>
-            <p>@Model.SeContactUidDisplay</p>
+            <p id="pmSenum">@Model.SeContactUidDisplay</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Client Number:</label>
-            <p>@Model.ClientFileNumberDisplay</p>
+            <p id="pmClientFnum">@Model.ClientFileNumberDisplay</p>
         </li>
         <!-- this is a hack, remove this column-->
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
@@ -38,28 +38,28 @@
     <ul class="row sectionList">
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Familiarization Trip</label>
-            <p>@Model.PreTripDateDisplay</p>
+            <p id="PreTripDate">@Model.PreTripDateDisplay</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Work Start Date:</label>
-            <p>@Model.WorkStartDateDisplay</p>
+            <p id="WorkStartDate">@Model.WorkStartDateDisplay</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Temp Housing:</label>
-            <p>@Model.TempHousingDays</p>
+            <p id="TempHousingDays">@Model.TempHousingDays</p>
         </li>
 
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Final Arrival:</label>
-            <p>@Model.FinalArrivalDateDisplay &nbsp;</p>
+            <p id="FinalArrivalDate">@Model.FinalArrivalDateDisplay &nbsp;</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Home Finding Date:</label>
-            <p>@Model.HomeFindingDateDisplay</p>
+            <p id="HFindingDate">@Model.HomeFindingDateDisplay</p>
         </li>
         <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
             <label>Temp Housing Last Day:</label>
-            <p>@Model.TempHousingEndDateDisplay</p>
+            <p id="TempHousingEndDate">@Model.TempHousingEndDateDisplay</p>
         </li>
     </ul>
     <hr>
@@ -69,28 +69,28 @@
         <ul class="row sectionList">
             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Monthly Budget:</label>
-                <p>@Model.HousingBudgetDisplay</p>
+                <p id="HousingBudget">@Model.HousingBudgetDisplay</p>
             </li>
             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Housing:</label>
-                <p>@Model.HousingTypeDisplay</p>
+                <p id="HousingType">@Model.HousingTypeDisplay</p>
             </li>
             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>School District:</label>
-                <p>@Model.SchoolDistrictDisplay </p>
+                <p id="SchoolDistrict">@Model.SchoolDistrictDisplay </p>
             </li>
 
             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>BD/BA:</label>
-                <p>@Model.NumberOfBedroomsDisplay/@Model.NumberOfBathroomsDisplay</p>
+                <p id="numberofBedBath">@Model.NumberOfBedroomsDisplay/@Model.NumberOfBathroomsDisplay</p>
             </li>
             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Sq.Ft:</label>
-                <p>@Model.SquareFootageDisplay</p>
+                <p id="SquareFootageDisplay">@Model.SquareFootageDisplay</p>
             </li>
             <li class="col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
                 <label>Rent or Own:</label>
-                <p>@Model.HomeFinding.OwnershipType</p>
+                <p id="OwnershipType">@Model.HomeFinding.OwnershipType</p>
             </li>
         </ul>
         <hr>
