fixed forget password UI and code issue

--- a/Odin/Content/css/forgotpassword.css
+++ b/Odin/Content/css/forgotpassword.css
@@ -1,6 +1,48 @@
 ﻿html, body {
   background-color: #f1f1f1; }
 
+a.dw_logo {
+  display: flex;
+  text-decoration: none;
+  align-items: center; }
+  a.dw_logo img.primaryNavHome__logo--mobile {
+    display: block;
+    height: 3rem;
+    width: auto;
+    text-decoration: none;
+    margin-right: 0.325rem; }
+  a.dw_logo img.primaryNavHome__logo {
+    display: none; }
+  a.dw_logo > p {
+    text-decoration: none;
+    line-height: 3rem;
+    height: 3rem;
+    color: #49ae44;
+    font-size: 2rem;
+    font-weight: 300;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    padding-left: 0.5rem;
+    margin-left: 0.5rem;
+    border-left: 1px solid #acacac; }
+  @media screen and (min-width: 48rem) {
+    a.dw_logo {
+      margin-left: 0.5rem; }
+      a.dw_logo img.primaryNavHome__logo--mobile {
+        display: none; }
+      a.dw_logo img.primaryNavHome__logo {
+        display: block;
+        height: 3rem;
+        width: auto;
+        padding-right: 0.325rem; } }
+  a.dw_logo:hover > p {
+    text-decoration: none; }
+
+.centered_logo {
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0; }
+
 body {
   padding-top: 0px;
   background-image: url("/Content/Images/bg_gradient_forgot_password.png"); }
@@ -13,7 +55,8 @@ body {
   list-style-type: none; }
 
 div.container.body-content {
-  padding-top: 50px; }
+  padding-top: 50px;
+  min-height: 100vh; }
   @media (max-width: 768px) {
     div.container.body-content {
       padding-top: 0px;
@@ -101,17 +144,7 @@ div.container.body-content {
         margin-top: 14px; }
       div.container.body-content div.col-lg-6 div#caption span#email, div.container.body-content div.col-lg-6 div#caption span#pw {
         color: #31a4dd; }
-    div.container.body-content div.col-lg-6 #logo {
-      display: flex;
-      justify-content: center;
-      height: 3rem;
-      align-items: center;
-      margin-bottom: 3rem; }
-      div.container.body-content div.col-lg-6 #logo #logoImage {
-        margin-right: 1rem;
-        padding-right: 1rem;
-        border-right: 1px solid #b7a998; }
-      div.container.body-content div.col-lg-6 #logo #logoOdin {
-        color: #49ae44;
-        font-size: 1.75rem; }
+
+.resetPassword_logo .dw_logo {
+  margin: 0 auto; }
 
