--- a/Odin/Content/css/forgotpassword.scss
+++ b/Odin/Content/css/forgotpassword.scss
@@ -19,6 +19,7 @@ body {
 
 div.container.body-content {
     padding-top: 50px;
+    min-height:100vh;
 
     @media (max-width: 768px) {
         padding-top: 0px;
@@ -146,25 +147,11 @@ div.container.body-content {
                 color: $DW_Blue;
             }
         }
+    }
+}
 
-        #logo {
-            display: flex;
-            justify-content: center;
-            height: 3rem;
-            align-items: center;
-            margin-bottom: 3rem;
-
-
-            #logoImage {
-                margin-right: 1rem;
-                padding-right: 1rem;
-                border-right: 1px solid $DW_Gray;
-            }
-
-            #logoOdin {
-                color: $DW_Green;
-                font-size: 1.75rem;
-            }
-        }
+.resetPassword_logo{
+    .dw_logo{
+        margin: 0 auto;
     }
 }
