--- a/Odin/Views/Account/ForgotPassword.cshtml
+++ b/Odin/Views/Account/ForgotPassword.cshtml
@@ -37,9 +37,8 @@
             </div>
         }
         
-        <div id="logo">
-            <img id="logoImage" src="~/Content/Images/dwellworks_icon.png" />
-            <span id="logoOdin">Destination</span>
+        <div class="centered_logo">
+            @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
         </div>
     </div>
 </div>
