--- a/Odin/Views/Account/ResetPassword.cshtml
+++ b/Odin/Views/Account/ResetPassword.cshtml
@@ -41,12 +41,12 @@
                 </div>
             </div>
         }
-
-        @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
+        <div class="centered_logo">
+            @Html.Partial("~/Views/Shared/Partials/_logo.cshtml")
+        </div>
     </div>
 </div>
-
-@Styles.Render("~/Styling/forgotpassword")
+    @Styles.Render("~/Styling/forgotpassword")    
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
