--- a/Odin/Views/Shared/Partials/_header.cshtml
+++ b/Odin/Views/Shared/Partials/_header.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <header>
     <nav id="primaryNav">
-        <a class="primaryNavHome" href="@Url.Action("Index","Role")">
+        <a class="dw_logo" href="@Url.Action("Index","Role")">
             <img class="primaryNavHome__logo--mobile" src="~/Content/Images/dw_logo_mobile.png">
             <img class="primaryNavHome__logo" src="~/Content/Images/dwellworks_icon.png">
             <p>Destination</p>
