--- a/Odin/Content/css/primaryNav.css
+++ b/Odin/Content/css/primaryNav.css
@@ -1,6 +1,48 @@
 ﻿html, body {
   background-color: #f1f1f1; }
 
+a.dw_logo {
+  display: flex;
+  text-decoration: none;
+  align-items: center; }
+  a.dw_logo img.primaryNavHome__logo--mobile {
+    display: block;
+    height: 3rem;
+    width: auto;
+    text-decoration: none;
+    margin-right: 0.325rem; }
+  a.dw_logo img.primaryNavHome__logo {
+    display: none; }
+  a.dw_logo > p {
+    text-decoration: none;
+    line-height: 3rem;
+    height: 3rem;
+    color: #49ae44;
+    font-size: 2rem;
+    font-weight: 300;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    padding-left: 0.5rem;
+    margin-left: 0.5rem;
+    border-left: 1px solid #acacac; }
+  @media screen and (min-width: 48rem) {
+    a.dw_logo {
+      margin-left: 0.5rem; }
+      a.dw_logo img.primaryNavHome__logo--mobile {
+        display: none; }
+      a.dw_logo img.primaryNavHome__logo {
+        display: block;
+        height: 3rem;
+        width: auto;
+        padding-right: 0.325rem; } }
+  a.dw_logo:hover > p {
+    text-decoration: none; }
+
+.centered_logo {
+  display: flex;
+  justify-content: center;
+  margin: 3rem 0; }
+
 #primaryNav {
   position: fixed;
   z-index: 1010;
@@ -17,39 +59,6 @@
     #primaryNav {
       height: 8rem;
       max-width: 1440px; } }
-
-a.primaryNavHome {
-  display: flex;
-  text-decoration: none;
-  align-items: center; }
-  a.primaryNavHome img.primaryNavHome__logo--mobile {
-    display: block;
-    height: 3rem;
-    width: auto;
-    margin-right: 0.325rem; }
-  a.primaryNavHome img.primaryNavHome__logo {
-    display: none; }
-  a.primaryNavHome > p {
-    line-height: 3rem;
-    height: 3rem;
-    color: #49ae44;
-    font-size: 2rem;
-    font-weight: 300;
-    margin: 0 0 0 0;
-    padding: 0 0 0 0;
-    padding-left: 0.5rem;
-    margin-left: 0.5rem;
-    border-left: 1px solid #acacac; }
-  @media screen and (min-width: 48rem) {
-    a.primaryNavHome {
-      margin-left: 0.5rem; }
-      a.primaryNavHome img.primaryNavHome__logo--mobile {
-        display: none; }
-      a.primaryNavHome img.primaryNavHome__logo {
-        display: block;
-        height: 3rem;
-        width: auto;
-        padding-right: 0.325rem; } }
 
 ul.primaryNavIconList {
   list-style: none;
