--- a/Odin/Views/Shared/Partials/_logo.cshtml
+++ b/Odin/Views/Shared/Partials/_logo.cshtml
@@ -1,5 +1,5 @@
-﻿<div id="dwellworks">
-    <img src="~/Content/Images/dwellworks_icon.png" />
-    <p>&nbsp;</p>
+﻿<a class="dw_logo" href="@Url.Action("Index","Role")">
+    <img class="primaryNavHome__logo--mobile" src="~/Content/Images/dw_logo_mobile.png">
+    <img class="primaryNavHome__logo" src="~/Content/Images/dwellworks_icon.png">
     <p>Destination</p>
-</div>
+</a>
