--- a/Odin/Views/Orders/Partials/_Housing.cshtml
+++ b/Odin/Views/Orders/Partials/_Housing.cshtml
@@ -50,19 +50,19 @@
                         
         <form class="col-md-6" id="housingFilter">
             <label class="housingFilter__title">Filter:</label>
-            <label>
+            <label id="allfilter">
                 @Html.RadioButton("Filter", "", true)
                 <span>All</span>
             </label>
-            <label>
+            <label id="newfilter">
                 @Html.RadioButton("Filter", "new", false)
                 <span>New</span>
             </label>
-            <label>
+            <label id="likedfilter">
                 @Html.RadioButton("Filter", "liked", false)
                 <span>Liked</span>
             </label>
-            <label>
+            <label id="dislikedfilter">
                 @Html.RadioButton("Filter", "disliked", false)
                 <span>Disliked</span>
             </label>
